--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/styles.css" />
   </head>
   <body>
-    <header class="site-header">
+    <header class="site-header" style="margin-bottom:8px;">
       <div class="brand">
         <div class="logo" aria-hidden="true">🧠</div>
         <div class="titles">
