Add: NGHIÊN CỨU THỊ TRƯỜNG section with comprehensive market analysis guide

--- a/index.html
+++ b/index.html
@@ -84,6 +84,183 @@
         </div>
       </section>
 
+      <!-- NGHIÊN CỨU THỊ TRƯỜNG (BẮT ĐẦU TỪ DỮ LIỆU) -->
+      <section class="card" id="nghien-cuu-thi-truong" data-accent="green">
+        <div class="card-header">
+          <h2>NGHIÊN CỨU THỊ TRƯỜNG (BẮT ĐẦU TỪ DỮ LIỆU)</h2>
+          <div class="actions">
+            <button class="btn toggle" data-target="#nghien-cuu-content">Mở rộng</button>
+            <button class="btn secondary toggle" data-target="#nghien-cuu-sources">Nguồn</button>
+          </div>
+        </div>
+        <div class="card-body" id="nghien-cuu-content" hidden>
+          <ol>
+            <li>
+              <strong>Google Trends – Xác định nhu cầu đang tăng</strong>
+              <ul>
+                <li>Truy cập trends.google.com</li>
+                <li>Chọn quốc gia bán (VD: United States)</li>
+                <li>Nhập từ khóa sản phẩm bạn đang nghĩ đến</li>
+                <li>Chọn khoảng thời gian: 12 tháng qua</li>
+                <li>
+                  Đọc biểu đồ:
+                  <ul>
+                    <li>Đường tăng: Nhu cầu đang đi lên → tiềm năng</li>
+                    <li>Đường ổn định: Có thể bán quanh năm (Evergreen)</li>
+                    <li>Đường giảm: Nên tránh</li>
+                  </ul>
+                </li>
+                <li>Ví dụ: "tote bag" ở US tăng đều trong 12 tháng → OK</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Keyword Planner – Kiểm tra lượng tìm kiếm & cạnh tranh</strong>
+              <ul>
+                <li>Truy cập ads.google.com → Tools → Keyword Planner</li>
+                <li>Nhập từ khóa → chọn khu vực (VD: United States)</li>
+                <li>
+                  Xem:
+                  <ul>
+                    <li>Average monthly searches ≥ 5,000/tháng → đủ nhu cầu</li>
+                    <li>CPC (Cost Per Click) trung bình ≤ $0.6 → cạnh tranh vừa</li>
+                    <li>Competition: Low/Medium → ưu tiên</li>
+                  </ul>
+                </li>
+                <li>Ví dụ: "tote bag" → 18,000 search/tháng, CPC $0.45, Medium</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Google Shopping Search – Xem thực tế thị trường</strong>
+              <ul>
+                <li>Search "từ khóa sản phẩm" trên shopping.google.com</li>
+                <li>
+                  Ghi chú:
+                  <ul>
+                    <li>Số lượng seller hiển thị</li>
+                    <li>Giá trung bình và range giá</li>
+                    <li>Chất lượng hình ảnh & tiêu đề</li>
+                  </ul>
+                </li>
+                <li>Lưu ý: Nếu thị trường toàn seller lớn (Amazon, Walmart) → cân nhắc</li>
+                <li>Ví dụ: "tote bag" có ~50 seller, giá $12–$35, nhiều ảnh nền xấu</li>
+              </ul>
+            </li>
+          </ol>
+
+          <h3>PHÂN LOẠI SẢN PHẨM (ĐỂ QUẢN LÝ RỦI RO)</h3>
+          <ol>
+            <li>
+              <strong>Evergreen – Bán quanh năm, nhu cầu ổn định</strong>
+              <ul>
+                <li>Ưu điểm: Duy trì doanh thu ổn định</li>
+                <li>Nhược: Tăng trưởng chậm, cạnh tranh nhiều</li>
+                <li>Ví dụ: Áo thun basic, balo laptop, ốp điện thoại</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Seasonal – Theo mùa hoặc sự kiện</strong>
+              <ul>
+                <li>Ưu điểm: Doanh số cao vào mùa</li>
+                <li>Nhược: Ngoài mùa có thể không bán được</li>
+                <li>Ví dụ: Đồ Noel, đồ bơi, áo khoác đông</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Trending – Xu hướng ngắn hạn, ăn nhanh</strong>
+              <ul>
+                <li>Ưu điểm: Lợi nhuận cao nếu bắt sớm</li>
+                <li>Nhược: Hết trend là hết bán</li>
+                <li>Ví dụ: Sản phẩm viral TikTok, phụ kiện phim hot</li>
+              </ul>
+            </li>
+          </ol>
+
+          <h3>PHÂN TÍCH CẠNH TRANH (ĐỂ BIẾT MÌNH CÓ CỬA KHÔNG)</h3>
+          <ol>
+            <li>
+              <strong>Số lượng đối thủ</strong>
+              <ul>
+                <li>Search trên Google Shopping</li>
+                <li>Nếu < 100 seller → cạnh tranh thấp/vừa</li>
+                <li>Nếu > 300 seller → cạnh tranh cao</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Chất lượng trình bày sản phẩm</strong>
+              <ul>
+                <li>Hình ảnh: Nền trắng, rõ nét, nhiều góc chụp</li>
+                <li>Tiêu đề: Có từ khóa chính, thông tin đầy đủ</li>
+                <li>Mô tả: Nêu rõ chất liệu, kích thước, công dụng</li>
+              </ul>
+            </li>
+            <li>
+              <strong>USP (Unique Selling Point) – Lợi thế cạnh tranh</strong>
+              <ul>
+                <li>Tính năng đặc biệt (chống nước, siêu nhẹ…)</li>
+                <li>Cá nhân hóa (in tên, in hình…)</li>
+                <li>Bao bì đẹp, dịch vụ ship nhanh</li>
+                <li>Ví dụ: Tote bag canvas dày, in hình tùy chọn, ship 3 ngày</li>
+              </ul>
+            </li>
+          </ol>
+
+          <h3>ĐÁNH GIÁ LỢI NHUẬN & LOGISTICS</h3>
+          <ol>
+            <li>
+              <strong>Tính chi phí</strong>
+              <ul>
+                <li>Giá nhập hàng</li>
+                <li>Vận chuyển đến khách</li>
+                <li>Thuế, phí quảng cáo</li>
+                <li>Ví dụ: Nhập $5 → Bán $20 → Trừ $7 (ads+ship) = Lãi $8</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Đặt biên lợi nhuận tối thiểu</strong>
+              <ul>
+                <li>Nên ≥ 30% sau khi trừ ads cost</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Kiểm tra vận chuyển</strong>
+              <ul>
+                <li>Hàng nhẹ, nhỏ → phí ship rẻ → dễ cạnh tranh giá</li>
+                <li>Hàng cồng kềnh → phí ship cao → cần gộp phí vào giá</li>
+                <li>Ví dụ: Tote bag nhẹ, ship US ~$3</li>
+              </ul>
+            </li>
+          </ol>
+
+          <h3>QUYẾT ĐỊNH CHỌN NICHE</h3>
+          <ol>
+            <li>
+              <strong>Đủ 4 tiêu chí:</strong>
+              <ul>
+                <li>Nhu cầu tăng/ổn định (Google Trends + Keyword Planner)</li>
+                <li>Cạnh tranh vừa phải (Shopping Search)</li>
+                <li>USP rõ ràng</li>
+                <li>Lợi nhuận ≥ 30%</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Ví dụ niche cuối cùng:</strong>
+              <ul>
+                <li>"Tote bag canvas dày, in hình tùy chọn, giá $20, nhắm thị trường US"</li>
+              </ul>
+            </li>
+          </ol>
+        </div>
+        <div class="card-sources" id="nghien-cuu-sources" hidden>
+          <ul class="sources">
+            <li><a href="https://trends.google.com" target="_blank" rel="noopener">Google Trends</a></li>
+            <li><a href="https://ads.google.com/um/KeywordPlanner" target="_blank" rel="noopener">Google Ads Keyword Planner</a></li>
+            <li><a href="https://shopping.google.com" target="_blank" rel="noopener">Google Shopping</a></li>
+            <li><a href="https://support.google.com/google-ads/answer/9004" target="_blank" rel="noopener">Keyword research guide</a></li>
+            <li><a href="https://support.google.com/merchants/answer/7052112" target="_blank" rel="noopener">Product data best practices</a></li>
+          </ul>
+        </div>
+      </section>
+
       <!-- TUÂN THỦ CHÍNH SÁCH -->
       <section class="card" id="policies" data-accent="red">
         <div class="card-header">
